# firmware-rs

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/ci/: build.sh
.github/workflows/: build.yml  call_build.yml  rust.yml
audio/: Cargo.toml
audio/src/: audio_filter.rs  lib.rs  tas2780.rs
blackpill-pcm5102a/: Cargo.toml  README.md
blackpill-pcm5102a/src/: lib.rs  main.rs
blackpill-usb-dac/: README.md
blackpill-usb-dac/common/: Cargo.toml
blackpill-usb-dac/common/src/: lib.rs
blackpill-usb-dac/v1.2/: Cargo.toml
blackpill-usb-dac/v1.2/src/: main.rs
blackpill-usb-dac/v3.1/: Cargo.toml
blackpill-usb-dac/v3.1/.cargo/: config.toml
blackpill-usb-dac/v3.1/src/: audio_routing.rs  main.rs
blackpill_pcm5102a/: Cargo.toml
blackpill_pcm5102a/.cargo/: config.toml
blackpill_pcm5102a/src/: audio_routing.rs  lib.rs  main.rs  usb_audio.rs
blus-mini-mk1/src/: audio_routing.rs  lib.rs  main.rs
blus-mini-mk2/: Cargo.toml
blus-mini-mk2/src/: audio_routing.rs  main.rs  usb_audio.rs
blus_mini_mk1/: Cargo.toml
blus_mini_mk1/.cargo/: config.toml
blus_mini_mk1/src/: audio_routing.rs  lib.rs  main.rs  usb_audio.rs
blus_mini_mk2/: Cargo.toml
blus_mini_mk2/.cargo/: config.toml
blus_mini_mk2/src/: audio_routing.rs  lib.rs  main.rs  usb_audio.rs
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: audio.rs  audio_filter.rs  audio_routing.rs  filters.rs  lib.rs  main.rs  tas2780.rs  usb_audio.rs
firmware/src/audio/: filter.rs  mod.rs
firmware/src/uac1/: channel_config.rs  class_codes.rs  desc_new  desc_old  mod.rs  terminal_type.rs
tas2780/: Cargo.toml
tas2780/src/: lib.rs  tas2780.rs
