[package]
edition = "2021"
name = "blackpill-pcm5102a"
version = "0.1.0"
license = "GPL-3.0"

[dependencies]
audio = { path = "../audio" }
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32f401cc",
    "unstable-pac",
    "memory-x",
    "time-driver-tim1",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-futures = "0.1.1"

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7"
embassy-embedded-hal = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
critical-section = "1.2"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }
grounded = "0.2.0"
static_assertions = "1"
micromath = "2.1.0"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
